--- a/index.html
+++ b/index.html
@@ -26,11 +26,71 @@
 				<h1>We are Stag Camp</h1>
 			</header>
 			<article>
-				<p>Welcome to Stag Camp.</p>
+				<p>At <span>Stag Camp</span> we welcome the stranger to join us in the <span>Black Rock Desert</span> and beyond.</p>
 			</article>
 		</section>
 
 		<section class="header--imgs">
+		<img src="img/intro/001.jpg">
+		<img src="img/intro/002.jpg">
+		<img src="img/intro/003.jpg">
+		<img src="img/intro/004.jpg">
+		<img src="img/intro/005.jpg">
+		<img src="img/intro/006.jpg">
+		<img src="img/intro/007.jpg">
+		<img src="img/intro/008.jpg">
+		<img src="img/intro/009.jpg">
+		<img src="img/intro/010.jpg">
+		<img src="img/intro/011.jpg">
+		<img src="img/intro/012.jpg">
+		<img src="img/intro/013.jpg">
+		<img src="img/intro/014.jpg">
+		<img src="img/intro/015.jpg">
+		<img src="img/intro/016.jpg">
+		<img src="img/intro/017.jpg">
+		<img src="img/intro/018.jpg">
+		<img src="img/intro/019.jpg">
+		<img src="img/intro/020.jpg">
+		<img src="img/intro/021.jpg">
+		<img src="img/intro/022.jpg">
+		<img src="img/intro/023.jpg">
+		<img src="img/intro/024.jpg">
+		<img src="img/intro/025.jpg">
+		<img src="img/intro/026.jpg">
+		<img src="img/intro/027.jpg">
+		<img src="img/intro/028.jpg">
+		<img src="img/intro/029.jpg">
+		<img src="img/intro/030.jpg">
+		<img src="img/intro/031.jpg">
+		<img src="img/intro/032.jpg">
+		<img src="img/intro/033.jpg">
+		<img src="img/intro/034.jpg">
+		<img src="img/intro/035.jpg">
+		<img src="img/intro/036.jpg">
+		<img src="img/intro/037.jpg">
+		<img src="img/intro/038.jpg">
+		<img src="img/intro/039.jpg">
+		<img src="img/intro/040.jpg">
+		<img src="img/intro/041.jpg">
+		<img src="img/intro/042.jpg">
+		<img src="img/intro/043.jpg">
+		<img src="img/intro/044.jpg">
+		<img src="img/intro/045.jpg">
+		<img src="img/intro/046.jpg">
+		<img src="img/intro/047.jpg">
+		<img src="img/intro/048.jpg">
+		<img src="img/intro/049.jpg">
+		<img src="img/intro/050.jpg">
+		<img src="img/intro/051.jpg">
+		<img src="img/intro/052.jpg">
+		<img src="img/intro/053.jpg">
+		<img src="img/intro/054.jpg">
+		<img src="img/intro/055.jpg">
+		<img src="img/intro/056.jpg">
+		<img src="img/intro/057.jpg">
+		<img src="img/intro/058.jpg">
+		<img src="img/intro/059.jpg">
+		<img src="img/intro/060.jpg">
 			
 		</section>
 	</section>
