--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 				<h1>We are Stag Camp</h1>
 			</header>
 			<article>
-				<p>At <span>Stag Camp</span> we welcome the stranger to join us in the <span>Black Rock Desert</span> and beyond.</p>
+				<p>Welcome Sraggers new and old.</p>
+				<p></p>
+			<br>
+				<p>At <span>Stag Camp</span> we've been welcoming the stranger to join us in the <span>Black Rock Desert</span> and beyond since 2007. Built each year with the theme of Radical Self Reliance, Staggers have brought </p>
+				<p>Words and things...</p>
 			</article>
+			<aside>
+				<p>Regerstration for Burning Man 2016: Da Vinci’s Workshop</p>
+				<button>Opening Soon</button>
+			</aside>
 		</section>
 
 		<section class="header--imgs">
