--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 		<section class="header--welcome">
 			<header>
 				<h1>We are Stag Camp</h1>
+				<!-- <h2>and so are you!</h2> -->
 			</header>
+			<img src="img/staglo.png">
 			<article>
-				<p>Welcome Sraggers new and old.</p>
-				<p></p>
+				<p><span>Basic intro here..</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper augue vitae mollis placerat. Curabitur eget nibh mattis, fringilla sem eget, suscipit lacus.</p>
+				<!-- <p></p>
 			<br>
 				<p>At <span>Stag Camp</span> we've been welcoming the stranger to join us in the <span>Black Rock Desert</span> and beyond since 2007. Built each year with the theme of Radical Self Reliance, Staggers have brought </p>
-				<p>Words and things...</p>
+				<p>Words and things...</p> -->
 			</article>
 			<aside>
-				<p>Regerstration for Burning Man 2016: Da Vinci’s Workshop</p>
+				<h3>Regerstration for Burning Man 2016: 
+				<br>Da Vinci’s Workshop</h3>
 				<button>Opening Soon</button>
 			</aside>
 		</section>
@@ -60,7 +63,7 @@
 		<img src="img/intro/019.jpg">
 		<img src="img/intro/020.jpg">
 		<img src="img/intro/021.jpg">
-		<img src="img/intro/022.jpg">
+		<!-- <img src="img/intro/022.jpg"> -->
 		<img src="img/intro/023.jpg">
 		<img src="img/intro/024.jpg">
 		<img src="img/intro/025.jpg">
@@ -101,6 +104,12 @@
 		<img src="img/intro/060.jpg">
 			
 		</section>
+	</section>
+
+	<section id="area01">
+
+		
+		
 	</section>
 
 	</body>
