--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 	<section class="header">
 		<section class="header--welcome">
 			<header>
+				<img src="img/staglo.png">
 				<h1>We are Stag Camp</h1>
 				<!-- <h2>and so are you!</h2> -->
 			</header>
-			<img src="img/staglo.png">
+			
 			<article>
 				<p><span>Basic intro here..</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper augue vitae mollis placerat. Curabitur eget nibh mattis, fringilla sem eget, suscipit lacus.</p>
 				<!-- <p></p>
@@ -106,9 +107,11 @@
 		</section>
 	</section>
 
-	<section id="area01">
+	<section id="area01" class="card">
 
-		
+		<h1>About Stag Camp</h1>
+		<h3>History</h3>
+		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper augue vitae mollis placerat. Curabitur eget nibh mattis, fringilla sem eget, suscipit lacus.</p>
 		
 	</section>
 
