--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Lora:400,700|Open+Sans:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora:400,700|Open+Sans:400,500,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -23,27 +23,32 @@
 	<section class="header">
 		<section class="header--welcome">
 			<header>
-				<img src="img/staglo.png">
+				<!-- <img src="img/staglo.png"> -->
 				<h1>We are Stag Camp</h1>
-				<!-- <h2>and so are you!</h2> -->
+				<h2>A Burning Man Theme Camp</h2>
 			</header>
 			
 			<article>
-				<p><span>Basic intro here..</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper augue vitae mollis placerat. Curabitur eget nibh mattis, fringilla sem eget, suscipit lacus.</p>
+				<!-- <p>We're a community of strangers that has been coming together in the Black Rock Desert since 2007 to create a community and experience Burning Man together.</p> -->
 				<!-- <p></p>
-			<br>
-				<p>At <span>Stag Camp</span> we've been welcoming the stranger to join us in the <span>Black Rock Desert</span> and beyond since 2007. Built each year with the theme of Radical Self Reliance, Staggers have brought </p>
-				<p>Words and things...</p> -->
+			<br> -->
+				<p>At <span>Stag Camp</span> we've been welcoming the stranger to join us in the <span>Black Rock Desert</span> and beyond since 2007. Guided by the Stag Philosphy and Radical Self Reliance, Stag Camp has become the camp for people coming to the playa for the first time while providing a home for people with a few burns under their belts. </p>
+				
 			</article>
-			<aside>
+			<!-- <aside>
 				<h3>Regerstration for Burning Man 2016: 
 				<br>Da Vinci’s Workshop</h3>
 				<button>Opening Soon</button>
-			</aside>
+			</aside> -->
 		</section>
 
 		<section class="header--imgs">
-		<img src="img/intro/001.jpg">
+		<div class="pho" id="header--photo-01"></div>
+		<div class="pho" id="header--photo-02"></div>
+		<div class="pho" id="header--photo-03"></div>
+		<div class="pho" id="header--photo-04"></div>
+		<div class="pho" id="header--photo-05"></div>
+		<!-- <img src="img/intro/001.jpg">
 		<img src="img/intro/002.jpg">
 		<img src="img/intro/003.jpg">
 		<img src="img/intro/004.jpg">
@@ -64,7 +69,7 @@
 		<img src="img/intro/019.jpg">
 		<img src="img/intro/020.jpg">
 		<img src="img/intro/021.jpg">
-		<!-- <img src="img/intro/022.jpg"> -->
+		<!-- <img src="img/intro/022.jpg"> --><!-- 
 		<img src="img/intro/023.jpg">
 		<img src="img/intro/024.jpg">
 		<img src="img/intro/025.jpg">
@@ -102,16 +107,34 @@
 		<img src="img/intro/057.jpg">
 		<img src="img/intro/058.jpg">
 		<img src="img/intro/059.jpg">
-		<img src="img/intro/060.jpg">
+		<img src="img/intro/060.jpg"> -->
 			
 		</section>
 	</section>
 
 	<section id="area01" class="card">
 
-		<h1>About Stag Camp</h1>
-		<h3>History</h3>
-		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ullamcorper augue vitae mollis placerat. Curabitur eget nibh mattis, fringilla sem eget, suscipit lacus.</p>
+		
+		
+			<h1>Stag Camp News</h1>
+		
+
+		<div class="news-card">
+			<article>
+				<h3>Foundraising for Stag Storage</h3>
+				<p>Camp has a storage unit in Reno, NV where we store the shade, speakers, bars, and all the other camp fixtures donated by our wonderful Staggers. The unit was genesourlly paid for by Mack the last few years but he'll be unable to cover the cost for the 2016 - 2017 storage year.</p>
+
+				<p>We need to raise $750 to cover the cost of the unit for a year. Any amount over our goal will be used for future years. If you are able to help out please do so <a href="#">here</a>.</p>
+			</article>
+		</div>
+
+		<div class="news-card">
+			<article>
+				<h3>Regerstation to camp at Stag Camp for Burning Man 2016 is now open!</h3>
+				
+				<p>Want to camp Stag this year? Fill out our regerstation form <a href="#">here</a>.</p>
+			</article>
+		</div>
 		
 	</section>
 
